# MyPass-Server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  docker-image.yml
migrations/: 001_initial.sql  002_share_links_allow_trusted_role.sql  003_add_editor_role.sql
src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/middleware/: mod.rs  owner_auth.rs  security_headers.rs
src/models/: card.rs  device.rs  mod.rs  share_link.rs  subscription.rs
src/routes/: cards.rs  devices.rs  health.rs  links.rs  mod.rs  subscriptions.rs
src/services/: push.rs
tests/: integration_test.rs
